Unified the components configuration logic.
Now the provider and logger components are configured using the
IConfiguration instance via the Configure and ConfigureAsync methods.

--- a/PiClimate.Logger/PiClimate.Logger.csproj
+++ b/PiClimate.Logger/PiClimate.Logger.csproj
@@ -30,8 +30,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Remove="Settings.json" />
-    <Content Include="Settings.json">
+    <None Remove="Configuration.json" />
+    <Content Include="Configuration.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
