Optimized BME280 provider logic.
Now it supports a custom device address provided via configuration.
Also it more deeply checks the device during connection.

--- a/PiClimate.Logger/Configuration.json
+++ b/PiClimate.Logger/Configuration.json
@@ -9,7 +9,8 @@
     "Server=localhost; Port=3306; UserId=root; Password=; Database=PiClimate"
   ],
   "Bme280Options": {
-    "I2cBusId": 1
+    "I2cBusId": 1,
+    "CustomI2cAddress": null
   },
   "MySqlOptions": {
     "UseConnectionStringKey": 0,
