Updated the used measurement loggers configuration format.
Now the measurement loggers to be used are set in the configuration as
a comma-separated string of names, not as an array. This allows to
override the whole list of used loggers via the corresponding command
line argument instead of overriding every single array element.

--- a/PiClimate.Logger/Configuration.json
+++ b/PiClimate.Logger/Configuration.json
@@ -1,19 +1,16 @@
 {
   "UseMeasurementProvider": "Bme280",
-  "AddMeasurementLoggers": [
-    "Console",
-    "MySql"
-  ],
+  "UseMeasurementLoggers": "Console, MySql",
   "MeasurementLoopDelay": 60,
-  "ConnectionStrings": [
-    "Server=localhost; Port=3306; UserId=root; Password=; Database=PiClimate"
-  ],
+  "ConnectionStrings": {
+    "Main": "Server=localhost; Port=3306; UserId=root; Password=; Database=PiClimate"
+  },
   "Bme280Options": {
     "I2cBusId": 1,
     "CustomI2cAddress": null
   },
   "MySqlOptions": {
-    "UseConnectionStringKey": 0,
+    "UseConnectionStringKey": "Main",
     "MeasurementsTableName": "Measurements"
   }
 }
