Added measurement limiters.
Measurement limiters allow to limit the logged data on some criteria
such as limiting the total count of stored measurements. The
introduced MySqlCountLimiter class performs this task after every new
measurement logging.

--- a/PiClimate.Logger/Configuration.json
+++ b/PiClimate.Logger/Configuration.json
@@ -1,6 +1,7 @@
 {
   "UseMeasurementProvider": "Bme280",
   "UseMeasurementLoggers": "Console, MySql",
+  "UseMeasurementLimiters": "MySqlCount",
   "MeasurementLoopDelay": 60,
   "ConnectionStrings": {
     "Main": "Server=localhost; Port=3306; UserId=root; Password=; Database=PiClimate"
@@ -12,5 +13,8 @@
   "MySqlOptions": {
     "UseConnectionStringKey": "Main",
     "MeasurementsTableName": "Measurements"
+  },
+  "CountLimiterOptions": {
+    "MaxMeasurementsCount": 1440
   }
 }
