Added the time period limiter.
It limits the amount of logged measurements to those fitting the
specified time period back from the moment of limiter appliance.

--- a/PiClimate.Logger/Configuration.json
+++ b/PiClimate.Logger/Configuration.json
@@ -15,6 +15,9 @@
     "MeasurementsTableName": "Measurements"
   },
   "CountLimiterOptions": {
-    "MaxMeasurementsCount": 1440
+    "CountLimit": 1440
+  },
+  "PeriodLimiterOptions": {
+    "PeriodLimit": 86400
   }
 }
