--- a/PiClimate.Monitor/PiClimate.Monitor.csproj
+++ b/PiClimate.Monitor/PiClimate.Monitor.csproj
@@ -11,4 +11,8 @@
     <FileVersion>1.0.0</FileVersion>
     <NeutralLanguage>en</NeutralLanguage>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.0.30" />
+    <PackageReference Include="MySqlConnector" Version="0.61.0" />
+  </ItemGroup>
 </Project>
