--- a/PiClimate.Logger/PiClimate.Logger.csproj
+++ b/PiClimate.Logger/PiClimate.Logger.csproj
@@ -1,19 +1,32 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<!--
+  This Source Code Form is subject to the terms of the Mozilla Public
+  License, v. 2.0. If a copy of the MPL was not distributed with this
+  file, You can obtain one at http://mozilla.org/MPL/2.0/.
+
+  Copyright © 2020 Maxim Yudin <stibiu@yandex.ru>
+-->
+
+<Project Sdk="Microsoft.NET.Sdk">
   <!-- Common configuration. -->
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <Nullable>enable</Nullable>
     <Title>PiClimate Logger</Title>
-    <Authors>Egiraht</Authors>
-    <Description>Climatic data logger</Description>
-    <Copyright>Egiraht (c) 2020</Copyright>
-    <Company>Egiraht</Company>
+    <Authors>Maxim Yudin</Authors>
+    <Description>Climatic data monitor</Description>
+    <Copyright>Copyright © 2020 Maxim Yudin &lt;stibiu@yandex.ru&gt;</Copyright>
+    <Company>Maxim Yudin</Company>
     <AssemblyVersion>1.0.0</AssemblyVersion>
     <FileVersion>1.0.0</FileVersion>
     <NeutralLanguage>en</NeutralLanguage>
     <Configurations>Debug;Release</Configurations>
     <Platforms>AnyCPU</Platforms>
+    <PackageProjectUrl>https://github.com/Egiraht/PiClimate/tree/master/PiClimate.Logger</PackageProjectUrl>
+    <PackageLicenseUrl>https://github.com/Egiraht/PiClimate/blob/master/License.txt</PackageLicenseUrl>
+    <RepositoryUrl>https://github.com/Egiraht/PiClimate.git</RepositoryUrl>
+    <RepositoryType>Git</RepositoryType>
+    <PackageTags>Measurements, pressure, temperature, humidity, logger</PackageTags>
   </PropertyGroup>
 
   <!-- Release build configuration. -->
@@ -26,10 +39,10 @@
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.0.30" />
     <PackageReference Include="Iot.Device.Bindings" Version="1.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="3.1.2" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.CommandLine" Version="3.1.2" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.2" />
-    <PackageReference Include="MySqlConnector" Version="0.62.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="3.1.3" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.CommandLine" Version="3.1.3" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.3" />
+    <PackageReference Include="MySqlConnector" Version="0.63.0" />
     <PackageReference Include="System.Device.Gpio" Version="1.0.0" />
   </ItemGroup>
 
