Made the protection keys to be stored in the custom directory.
It is important for shared hosting cases where the keys can be stored
only in RAM and become lost when the server restarts. This leads to
cookie authentication failures as the cookie data can no longer be
normally decoded after the encryption key is lost.

--- a/PiClimate.Monitor/Configuration.json
+++ b/PiClimate.Monitor/Configuration.json
@@ -3,6 +3,10 @@
   // Available values: MySql (MySqlSource).
   "UseMeasurementSource": "MySql",
 
+  // Defines the path to the directory where the data protection keys will be stored.
+  // The directory must be accessible for file reading and writing.
+  "ProtectionKeysDirectoryPath": "./Keys",
+
   // Defines the named list of connection strings providing the database connection parameters.
   "ConnectionStrings": {
     "MySql": "Server=localhost; Port=3306; UserId=root; Password=; Database=PiClimate"
