--- a/.gitignore
+++ b/.gitignore
@@ -423,3 +423,7 @@ fabric.properties
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
 
+
+### Solution-specific ignores
+# Ignore the "Keys" directory that can be created by default for data protection keys.
+Keys/
