Updated the error pages.
The new page for HTTP error status codes uses the common visual layout
instead of a simple text notice.

--- a/PiClimate.Monitor/PiClimate.Monitor.csproj
+++ b/PiClimate.Monitor/PiClimate.Monitor.csproj
@@ -50,6 +50,10 @@
   <ItemGroup>
     <Content Remove="Scripts/**/*.json" />
     <None Include="Scripts/**/*.json" />
+    <Content Update="Pages\Status.cshtml">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
   </ItemGroup>
 
   <!-- Copy all files from the "Static" directory to the output directory. -->
