Enabled source map generation when compiling the TypeScript files.
The source map improves the quality of in-browser script debugging.
This required a movement of all the TypeScript source files to the
static files directory so they can be copied to the output.
Also modified the measurement filtering so that the ToTime parameter
now has priority over the TimePeriod parameter when both parameters
are provided simultaneously.

--- a/PiClimate.Monitor/Static/js/Monitor/tsconfig.json
+++ b/PiClimate.Monitor/Static/js/Monitor/tsconfig.json
@@ -8,9 +8,10 @@
   "compilerOptions": {
     "module": "System",
     "target": "ES2015",
-    "outFile": "../../Static/js/PiClimate.Monitor.js",
+    "outFile": "../Monitor.js",
     "strict": true,
-    "removeComments": true
+    "removeComments": true,
+    "sourceMap": true
   },
   "exclude": [
     "node_modules"
