--- a/PiClimate.Monitor/PiClimate.Monitor.csproj
+++ b/PiClimate.Monitor/PiClimate.Monitor.csproj
@@ -46,19 +46,10 @@
     <TypeScriptCompile Include="Scripts/**/*.ts" />
   </ItemGroup>
 
-  <!-- Do not copy JSON files from the "Scripts" directory to the output directory. -->
-  <ItemGroup>
-    <Content Remove="Scripts/**/*.json" />
-    <None Include="Scripts/**/*.json" />
-    <Content Update="Pages\Status.cshtml">
-      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
-      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
-    </Content>
-  </ItemGroup>
-
   <!-- Copy all files from the "Static" directory to the output directory. -->
   <ItemGroup>
     <None Remove="Static/**/*" />
+    <Content Remove="Static/**/*.json" />
     <Content Include="Static/**/*">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
