Updated the systemd service script files.
Also removed these files from publishing into the output directory
because these files require many customizations to work properly on
every particular system. So they may be taken from source files if
there is a need.

--- a/PiClimate.Logger/Scripts/PiClimate.Logger.service
+++ b/PiClimate.Logger/Scripts/PiClimate.Logger.service
@@ -10,12 +10,12 @@ After=network.target
 
 [Service]
 Type=forking
-PIDFile=/home/pi/PiClimate/.pid
-WorkingDirectory=/home/pi/PiClimate
+PIDFile=/home/pi/PiClimate.Logger/.pid
+WorkingDirectory=/home/pi/PiClimate.Logger
 User=pi
 Group=pi
-ExecStart=/home/pi/PiClimate/Scripts/StartService.sh
-ExecStop=/home/pi/PiClimate/Scripts/StopService.sh
+ExecStart=/home/pi/PiClimate.Logger/Scripts/StartService.sh
+ExecStop=/home/pi/PiClimate.Logger/Scripts/StopService.sh
 RestartSec=60
 Restart=always
 
