--- a/PiClimate.Monitor/PiClimate.Monitor.csproj
+++ b/PiClimate.Monitor/PiClimate.Monitor.csproj
@@ -26,6 +26,7 @@
     <PackageTags>Measurements, pressure, temperature, humidity, monitor</PackageTags>
     <ApplicationIcon>../Icon/PiClimate.ico</ApplicationIcon>
     <LangVersion>default</LangVersion>
+    <TypeScriptToolsVersion>latest</TypeScriptToolsVersion>
   </PropertyGroup>
 
   <!-- Release build configuration. -->
@@ -37,7 +38,7 @@
   <!-- Project dependencies. -->
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.0.35" />
-    <PackageReference Include="MySqlConnector" Version="0.64.2" />
+    <PackageReference Include="MySqlConnector" Version="0.66.0" />
   </ItemGroup>
 
   <!-- Copy all files from the "Static" directory to the output directory. -->
