Added the latest data page to the monitor.
On this page, the latest logged data entry is displayed. Now it is used
as a main page instead of the last day data chart page.
Added a warning indicating that the latest data have been logged more
that N minutes ago to indicate possible data logging failures. The time
period can be customized through configuration.
Also added a signed in user name to the navigation menu.

--- a/PiClimate.Monitor/Configuration.json
+++ b/PiClimate.Monitor/Configuration.json
@@ -7,6 +7,10 @@
   // The directory must be accessible for file reading and writing.
   "ProtectionKeysDirectoryPath": "./Keys",
 
+  // Defines the time period in minutes from the latest logged measurement till the current moment beyond which
+  // the data can be treated obsolete, so the corresponding warning will appear.
+  "ObsoleteDataPeriod": 10,
+
   // Defines the named list of connection strings providing the database connection parameters.
   "ConnectionStrings": {
     "MySql": "Server=localhost; Port=3306; UserId=root; Password=; Database=PiClimate"
