--- a/PiClimate.Monitor/PiClimate.Monitor.csproj
+++ b/PiClimate.Monitor/PiClimate.Monitor.csproj
@@ -9,15 +9,15 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
   <!-- Common configuration. -->
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <Nullable>enable</Nullable>
     <Title>PiClimate Monitor</Title>
     <Authors>Maxim Yudin</Authors>
     <Description>Climatic data monitor</Description>
     <Copyright>Copyright © 2020 Maxim Yudin &lt;stibiu@yandex.ru&gt;</Copyright>
     <Company>Maxim Yudin</Company>
-    <AssemblyVersion>1.0.0</AssemblyVersion>
-    <FileVersion>1.0.0</FileVersion>
+    <AssemblyVersion>1.1.0</AssemblyVersion>
+    <InformationalVersion>1.1.0</InformationalVersion>
     <NeutralLanguage>en</NeutralLanguage>
     <PackageProjectUrl>https://github.com/Egiraht/PiClimate/tree/master/PiClimate.Monitor</PackageProjectUrl>
     <PackageLicenseUrl>https://github.com/Egiraht/PiClimate/blob/master/License.txt</PackageLicenseUrl>
@@ -37,8 +37,8 @@
 
   <!-- Project dependencies. -->
   <ItemGroup>
-    <PackageReference Include="Dapper" Version="2.0.35" />
-    <PackageReference Include="MySqlConnector" Version="0.66.0" />
+    <PackageReference Include="Dapper" Version="2.0.78" />
+    <PackageReference Include="MySqlConnector" Version="1.3.1" />
   </ItemGroup>
 
   <!-- Copy all files from the "Static" directory to the output directory. -->
@@ -50,7 +50,7 @@
     </Content>
   </ItemGroup>
 
-  <!-- Ignore the files from the "Keys" directory. -->
+  <!-- Ignore contents of the "Keys" directory that may be created in the project directory during debugging. -->
   <ItemGroup>
     <None Remove="Keys/**/*" />
   </ItemGroup>
