Added the random data source for Monitor.
Also changed the default settings to those that do not require the
presence of a database.

--- a/PiClimate.Logger/Configuration.json
+++ b/PiClimate.Logger/Configuration.json
@@ -2,16 +2,16 @@
   // Defines the measurement provider to use.
   // The value cannot be empty.
   // Available values: BmeReader (BmeReaderProvider), Bme280 (Bme280Provider), RandomData (RandomDataProvider).
-  "UseMeasurementProvider": "Bme280",
+  "UseMeasurementProvider": "RandomData",
 
   // Defines a comma-separated list of measurement loggers to use.
   // Available values: Console (ConsoleLogger), MySql (MySqlLogger).
-  "UseMeasurementLoggers": "Console, MySql",
+  "UseMeasurementLoggers": "Console",
 
   // Defines a comma-separated list of measurement limiters to use.
   // The order of the used limiters in the list defines the limiter appliance order, so it may matter.
   // Available values: MySqlCount (MySqlCountLimiter), MySqlPeriod (MySqlPeriodLimiter).
-  "UseMeasurementLimiters": "MySqlCount",
+  "UseMeasurementLimiters": "",
 
   // Defines the measurement loop delay value in seconds.
   "MeasurementLoopDelay": 60,
