Updated the settings acquisition logic.
The settings file is now automatically (re)generated after reading.
This allows to restore the file settings according to the latest
settings structure changes.
The authentication cookies now have expiration period expressed
in seconds. The same is for the obsolete data period setting as well.
The names of the settings files have been changed from
"Configuration.json" to "Settings.json" to prevent incompatibility
issues with already existing files.

--- a/PiClimate.Logger/PiClimate.Logger.csproj
+++ b/PiClimate.Logger/PiClimate.Logger.csproj
@@ -17,8 +17,8 @@
     <Description>Climatic data monitor</Description>
     <Copyright>Copyright © 2020 Maxim Yudin &lt;stibiu@yandex.ru&gt;</Copyright>
     <Company>Maxim Yudin</Company>
-    <AssemblyVersion>1.1.0</AssemblyVersion>
-    <InformationalVersion>1.1.0</InformationalVersion>
+    <AssemblyVersion>1.2.0</AssemblyVersion>
+    <InformationalVersion>1.2.0</InformationalVersion>
     <NeutralLanguage>en</NeutralLanguage>
     <Configurations>Debug;Release</Configurations>
     <Platforms>AnyCPU</Platforms>
@@ -47,11 +47,8 @@
     <PackageReference Include="MySqlConnector" Version="1.3.1" />
   </ItemGroup>
 
-  <!-- Copy the "Configuration.json" file to the output directory. -->
+  <!-- Local project references. -->
   <ItemGroup>
-    <None Remove="Configuration.json" />
-    <Content Include="Configuration.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
+    <ProjectReference Include="../PiClimate.Common/PiClimate.Common.csproj" />
   </ItemGroup>
 </Project>
