--- a/PiClimate.Common/PiClimate.Common.csproj
+++ b/PiClimate.Common/PiClimate.Common.csproj
@@ -6,20 +6,20 @@
   Copyright © 2020 Maxim Yudin <stibiu@yandex.ru>
 -->
 
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
   <!-- Common configuration. -->
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <Nullable>enable</Nullable>
-    <Title>PiClimate Monitor</Title>
+    <Title>PiClimate Common</Title>
     <Authors>Maxim Yudin</Authors>
-    <Description>Climatic data monitor</Description>
+    <Description>Climatic data common library</Description>
     <Copyright>Copyright © 2020 Maxim Yudin &lt;stibiu@yandex.ru&gt;</Copyright>
     <Company>Maxim Yudin</Company>
-    <AssemblyVersion>1.2.0</AssemblyVersion>
-    <InformationalVersion>1.2.0</InformationalVersion>
+    <AssemblyVersion>1.0.0</AssemblyVersion>
+    <InformationalVersion>1.0.0</InformationalVersion>
     <NeutralLanguage>en</NeutralLanguage>
-    <PackageProjectUrl>https://github.com/Egiraht/PiClimate/tree/master/PiClimate.Monitor</PackageProjectUrl>
+    <PackageProjectUrl>https://github.com/Egiraht/PiClimate/tree/master/PiClimate.Common</PackageProjectUrl>
     <PackageLicenseUrl>https://github.com/Egiraht/PiClimate/blob/master/License.txt</PackageLicenseUrl>
     <RepositoryUrl>https://github.com/Egiraht/PiClimate.git</RepositoryUrl>
     <RepositoryType>Git</RepositoryType>
@@ -34,29 +34,9 @@
     <DebugType>none</DebugType>
     <DebugSymbols>false</DebugSymbols>
   </PropertyGroup>
-
-  <!-- Project dependencies. -->
   <ItemGroup>
-    <PackageReference Include="Dapper" Version="2.0.78" />
-    <PackageReference Include="MySqlConnector" Version="1.3.1" />
-  </ItemGroup>
-
-  <!-- Local project references. -->
-  <ItemGroup>
-    <ProjectReference Include="../PiClimate.Common/PiClimate.Common.csproj" />
-  </ItemGroup>
-
-  <!-- Copy all files from the "Static" directory to the output directory. -->
-  <ItemGroup>
-    <None Remove="Static/**/*" />
-    <Content Remove="Static/**/*.json" />
-    <Content Include="Static/**/*">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-  </ItemGroup>
-
-  <!-- Ignore contents of the "Keys" directory that may be created in the project directory during debugging. -->
-  <ItemGroup>
-    <None Remove="Keys/**/*" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.CommandLine" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0" />
   </ItemGroup>
 </Project>
