Added measurements data acquisition from the server.
The chart summary table does not display any data yet.

--- a/PiClimate.Monitor.WebAssembly/PiClimate.Monitor.WebAssembly.csproj
+++ b/PiClimate.Monitor.WebAssembly/PiClimate.Monitor.WebAssembly.csproj
@@ -53,5 +53,8 @@
     <None Update="Shared/Chart.razor.css">
       <DependentUpon>Chart.razor</DependentUpon>
     </None>
+    <None Update="Pages/Monitor.razor.css">
+      <DependentUpon>Monitor.razor</DependentUpon>
+    </None>
   </ItemGroup>
 </Project>
