--- a/PiClimate.Common/PiClimate.Common.csproj
+++ b/PiClimate.Common/PiClimate.Common.csproj
@@ -40,5 +40,6 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.CommandLine" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0" />
+    <PackageReference Include="UnitsNet" Version="4.86.0" />
   </ItemGroup>
 </Project>
