--- a/PiClimate.Logger/PiClimate.Logger.csproj
+++ b/PiClimate.Logger/PiClimate.Logger.csproj
@@ -45,6 +45,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.CommandLine" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0" />
     <PackageReference Include="MySqlConnector" Version="1.3.1" />
+    <PackageReference Include="UnitsNet" Version="4.86.0" />
   </ItemGroup>
 
   <!-- Local project references. -->
