--- a/PiClimate.Monitor.WebAssembly/PiClimate.Monitor.WebAssembly.csproj
+++ b/PiClimate.Monitor.WebAssembly/PiClimate.Monitor.WebAssembly.csproj
@@ -50,11 +50,20 @@
 
   <!-- File dependencies. -->
   <ItemGroup>
-    <None Update="Shared/Chart.razor.css">
-      <DependentUpon>Chart.razor</DependentUpon>
-    </None>
     <None Update="Pages/Monitor.razor.css">
       <DependentUpon>Monitor.razor</DependentUpon>
+    </None>
+    <None Update="Pages/Components/Chart.razor.css">
+      <DependentUpon>Chart.razor</DependentUpon>
+    </None>
+    <None Update="Pages/Components/DataSummary.razor.css">
+      <DependentUpon>DataSummary.razor</DependentUpon>
+    </None>
+    <None Update="Pages/Components/Layout.razor.css">
+      <DependentUpon>Layout.razor</DependentUpon>
+    </None>
+    <None Update="Pages/Components/NavMenu.razor.css">
+      <DependentUpon>NavMenu.razor</DependentUpon>
     </None>
   </ItemGroup>
 </Project>
