--- a/PiClimate.Monitor.WebAssembly/PiClimate.Monitor.WebAssembly.csproj
+++ b/PiClimate.Monitor.WebAssembly/PiClimate.Monitor.WebAssembly.csproj
@@ -37,11 +37,12 @@
 
   <!-- Project dependencies. -->
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.4" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="5.0.4" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.4" PrivateAssets="all" />
-    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.9.0" />
-    <PackageReference Include="UnitsNet" Version="4.86.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.5" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="5.0.5" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.5" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="5.0.0" />
+    <PackageReference Include="UnitsNet" Version="4.87.0" />
   </ItemGroup>
 
   <!-- Local project references. -->
@@ -65,6 +66,9 @@
     </None>
     <None Update="Pages/Components/NavMenu.razor.css">
       <DependentUpon>NavMenu.razor</DependentUpon>
+    </None>
+    <None Update="Pages/Components/AuthPanel.razor.css">
+      <DependentUpon>AuthPanel.razor</DependentUpon>
     </None>
   </ItemGroup>
 </Project>
