Added the automatic comments generation for settings.
Comment messages now can be defined for settings properties using the
CommentAttribute. All settings classes must derive from the
SettingsSection class for such comments to be enumerated. The comment
messages defined this way will be added above the corresponding
properties during settings JSON file (re)generation.

--- a/PiClimate.Monitor.WebAssembly/PiClimate.Monitor.WebAssembly.csproj
+++ b/PiClimate.Monitor.WebAssembly/PiClimate.Monitor.WebAssembly.csproj
@@ -20,7 +20,7 @@
     <AssemblyVersion>2.0.0</AssemblyVersion>
     <InformationalVersion>2.0.0</InformationalVersion>
     <NeutralLanguage>en</NeutralLanguage>
-    <PackageProjectUrl>https://github.com/Egiraht/PiClimate/tree/master/PiClimate.Monitor.WASM</PackageProjectUrl>
+    <PackageProjectUrl>https://github.com/Egiraht/PiClimate/tree/master/PiClimate.Monitor.WebAssembly</PackageProjectUrl>
     <PackageLicenseUrl>https://github.com/Egiraht/PiClimate/blob/master/License.txt</PackageLicenseUrl>
     <RepositoryUrl>https://github.com/Egiraht/PiClimate.git</RepositoryUrl>
     <RepositoryType>Git</RepositoryType>
