Added the chart update button to Monitor.
The button floats at the top left corner of the chart and allows to
update its state according to the selected time offset or period.

--- a/PiClimate.Monitor.WebAssembly/PiClimate.Monitor.WebAssembly.csproj
+++ b/PiClimate.Monitor.WebAssembly/PiClimate.Monitor.WebAssembly.csproj
@@ -70,5 +70,8 @@
     <None Update="Pages/Components/AuthPanel.razor.css">
       <DependentUpon>AuthPanel.razor</DependentUpon>
     </None>
+    <None Update="Pages/Components/UpdateButton.razor.css">
+      <DependentUpon>UpdateButton.razor</DependentUpon>
+    </None>
   </ItemGroup>
 </Project>
