Fixed WebAPI requests authentication.
In some browsers, the authentication cookie was not being sent
automatically with WebAPI requests.
Also changed the informational version to v2.0.0-beta.

--- a/PiClimate.Logger/PiClimate.Logger.csproj
+++ b/PiClimate.Logger/PiClimate.Logger.csproj
@@ -18,7 +18,7 @@
     <Copyright>Copyright © 2020-2021 Maxim Yudin &lt;stibiu@yandex.ru&gt;</Copyright>
     <Company>Maxim Yudin</Company>
     <AssemblyVersion>2.0.0</AssemblyVersion>
-    <InformationalVersion>2.0.0</InformationalVersion>
+    <InformationalVersion>2.0.0-beta</InformationalVersion>
     <NeutralLanguage>en</NeutralLanguage>
     <Configurations>Debug;Release</Configurations>
     <Platforms>AnyCPU</Platforms>
