Added UI localization for Monitor.
Localizations were added for English and Russian languages. The language
is selected using the current browser's locale. English remains a
fallback UI language for unsupported locales.

--- a/PiClimate.Common/PiClimate.Common.csproj
+++ b/PiClimate.Common/PiClimate.Common.csproj
@@ -44,4 +44,17 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0" />
     <PackageReference Include="UnitsNet" Version="4.89.1" />
   </ItemGroup>
+  
+  <!-- Localization resource files. -->
+  <ItemGroup>
+    <EmbeddedResource Update="Localization/Strings.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>Strings.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <Compile Update="Localization/Strings.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Strings.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
 </Project>
