--- a/PiClimate.Monitor.WebAssembly/PiClimate.Monitor.WebAssembly.csproj
+++ b/PiClimate.Monitor.WebAssembly/PiClimate.Monitor.WebAssembly.csproj
@@ -51,4 +51,17 @@
   <ItemGroup>
     <ProjectReference Include="../PiClimate.Common/PiClimate.Common.csproj" />
   </ItemGroup>
+  
+  <!-- Localization resource files. -->
+  <ItemGroup>
+    <EmbeddedResource Update="Localization/Strings.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>Strings.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <Compile Update="Localization/Strings.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Strings.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
 </Project>
