--- a/PiClimate.Common/PiClimate.Common.csproj
+++ b/PiClimate.Common/PiClimate.Common.csproj
@@ -17,7 +17,7 @@
     <Copyright>Copyright © 2020-2021 Maxim Yudin &lt;stibiu@yandex.ru&gt;</Copyright>
     <Company>Maxim Yudin</Company>
     <AssemblyVersion>2.0.0</AssemblyVersion>
-    <InformationalVersion>2.0.0-beta</InformationalVersion>
+    <InformationalVersion>2.0.0</InformationalVersion>
     <NeutralLanguage>en</NeutralLanguage>
     <Configurations>Debug;Release</Configurations>
     <Platforms>AnyCPU</Platforms>
@@ -44,7 +44,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0" />
     <PackageReference Include="UnitsNet" Version="4.89.1" />
   </ItemGroup>
-  
+
   <!-- Localization resource files. -->
   <ItemGroup>
     <EmbeddedResource Update="Localization/Strings.resx">
