--- a/PiClimate.Logger/PiClimate.Logger.csproj
+++ b/PiClimate.Logger/PiClimate.Logger.csproj
@@ -18,7 +18,7 @@
     <Copyright>Copyright © 2020-2021 Maxim Yudin &lt;stibiu@yandex.ru&gt;</Copyright>
     <Company>Maxim Yudin</Company>
     <AssemblyVersion>2.0.0</AssemblyVersion>
-    <InformationalVersion>2.0.0-beta</InformationalVersion>
+    <InformationalVersion>2.0.0</InformationalVersion>
     <NeutralLanguage>en</NeutralLanguage>
     <Configurations>Debug;Release</Configurations>
     <Platforms>AnyCPU</Platforms>
@@ -39,12 +39,12 @@
 
   <!-- Project dependencies. -->
   <ItemGroup>
-    <PackageReference Include="Dapper" Version="2.0.78" />
+    <PackageReference Include="Dapper" Version="2.0.90" />
     <PackageReference Include="Iot.Device.Bindings" Version="1.4.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.CommandLine" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0" />
-    <PackageReference Include="MySqlConnector" Version="1.3.7" />
+    <PackageReference Include="MySqlConnector" Version="1.3.8" />
     <PackageReference Include="UnitsNet" Version="4.89.1" />
   </ItemGroup>
 
