--- a/PiClimate.Monitor.WebAssembly/PiClimate.Monitor.WebAssembly.csproj
+++ b/PiClimate.Monitor.WebAssembly/PiClimate.Monitor.WebAssembly.csproj
@@ -18,7 +18,7 @@
     <Copyright>Copyright © 2020-2021 Maxim Yudin &lt;stibiu@yandex.ru&gt;</Copyright>
     <Company>Maxim Yudin</Company>
     <AssemblyVersion>2.0.0</AssemblyVersion>
-    <InformationalVersion>2.0.0-beta</InformationalVersion>
+    <InformationalVersion>2.0.0</InformationalVersion>
     <NeutralLanguage>en</NeutralLanguage>
     <Configurations>Debug;Release</Configurations>
     <Platforms>AnyCPU</Platforms>
@@ -51,7 +51,7 @@
   <ItemGroup>
     <ProjectReference Include="../PiClimate.Common/PiClimate.Common.csproj" />
   </ItemGroup>
-  
+
   <!-- Localization resource files. -->
   <ItemGroup>
     <EmbeddedResource Update="Localization/Strings.resx">
