--- a/PiClimate.Monitor/PiClimate.Monitor.csproj
+++ b/PiClimate.Monitor/PiClimate.Monitor.csproj
@@ -17,7 +17,7 @@
     <Copyright>Copyright © 2020-2021 Maxim Yudin &lt;stibiu@yandex.ru&gt;</Copyright>
     <Company>Maxim Yudin</Company>
     <AssemblyVersion>2.0.0</AssemblyVersion>
-    <InformationalVersion>2.0.0-beta</InformationalVersion>
+    <InformationalVersion>2.0.0</InformationalVersion>
     <NeutralLanguage>en</NeutralLanguage>
     <Configurations>Debug;Release</Configurations>
     <Platforms>AnyCPU</Platforms>
@@ -38,9 +38,9 @@
 
   <!-- Project dependencies. -->
   <ItemGroup>
-    <PackageReference Include="Dapper" Version="2.0.78" />
+    <PackageReference Include="Dapper" Version="2.0.90" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="5.0.5" />
-    <PackageReference Include="MySqlConnector" Version="1.3.7" />
+    <PackageReference Include="MySqlConnector" Version="1.3.8" />
   </ItemGroup>
 
   <!-- Local project references. -->
